@@ -44,6 +44,11 @@
 
 #define NOTH 3
 
+/* stable fix to allow to import jam bugfixes without having to change
+   XMSG layout */
+
+#define replynext replies[MAX_REPLY - 1]
+
 MSG *MSGAPI JamOpenArea(byte * name, word mode, word type)
 {
    MSG *jm;
@@ -317,8 +322,8 @@ static dword EXPENTRY JamReadMsg(MSGH * msgh, XMSG * msg, dword offset, dword by
          offset -= msgh->Hdr.TxtLen;
          if (bytes > msgh->lclen) bytes = msgh->lclen;
          if (offset < msgh->lclen) {
-            strncpy(text, msgh->lctrl+offset, bytes-offset);
             bytesread = bytes-offset;
+            strncpy(text, msgh->lctrl+offset, bytesread);
          } else {
          } /* endif */
          msgh->cur_pos += bytesread;
@@ -1127,6 +1132,10 @@ static JAMSUBFIELDptr StrToSubfield(unsigned char *str, dword *len)
       kludge = str+6;
       subtypes = JAMSFLD_FLAGS;
    }
+   else if (strstr(str, "TZUTC: ")) {
+      kludge = str+6;
+      subtypes = JAMSFLD_TZUTCINFO;
+   }
    else {
       kludge = str;
       subtypes = JAMSFLD_FTSKLUDGE;
@@ -1301,7 +1310,7 @@ static void MSGAPI ConvertCtrlToSubf(JAMHDRptr jamhdr, JAMSUBFIELDptr
 
    ctrlp = ctrl;
 
-   ptr = (unsigned char *)strchr((char *)ctrlp, '\1');
+   ptr = (unsigned char *)strchr((char *)ctrlp, '\001');
 
    while (ptr) {
       *ptr = '\0';
@@ -1315,7 +1324,7 @@ static void MSGAPI ConvertCtrlToSubf(JAMHDRptr jamhdr, JAMSUBFIELDptr
       }
       ptr++;
       ctrlp = ptr;
-      ptr = (unsigned char *)strchr(ctrlp, '\1');
+      ptr = (unsigned char *)strchr(ctrlp, '\001');
    }
 
    if (*ctrlp && (SubFieldCur = StrToSubfield(ctrlp, &len))) {
@@ -1358,10 +1367,10 @@ unsigned char *DelimText(JAMHDRptr jamhdr, JAMSUBFIELDptr *subfield, unsigned ch
    first = text;
    while (*first) {
       ptr = (unsigned char *)strchr(first, '\r');
-      if (ptr) *ptr = 0;
-      if (strstr(first, "SEEN-BY: ") == (char*)first  || *first == '\1') {
+      if (ptr) *ptr = '\0';
+      if (strstr(first, "SEEN-BY: ") == (char*)first  || *first == '\001') {
 
-         if (*first == '\1') first++;
+         if (*first == '\001') first++;
 
          if ((SubFieldCur = StrToSubfield(first, &clen))) {
             SubField = (JAMSUBFIELDptr)farrealloc(SubField, sublen+clen);
@@ -1391,17 +1400,21 @@ unsigned char *DelimText(JAMHDRptr jamhdr, JAMSUBFIELDptr *subfield, unsigned ch
 
 int makeKludge(char **buff, char *sstr, unsigned char *str, char *ent, int len)
 {
-   if (!*buff) *buff = (char*)calloc(1, sizeof(char));
+   char *p;
+   if (!*buff) {
+       *buff = (char*)malloc(strlen(sstr)+strlen(ent)+len+1);
+       if (*buff) **buff='\0';
+   }
+   else
+       *buff = (char*)realloc(*buff, strlen(*buff)+strlen(sstr)+strlen(ent)+len+1);
 
    if (!*buff) return 0;
 
-   *buff = (char*)realloc(*buff, strlen(*buff)+strlen(sstr)+strlen(ent)+len+1);
-
-   if (!*buff) return 0;
-
-   strcat(*buff, sstr);
-   strncat(*buff, str, len);
-   strcat(*buff, ent);
+   p=*buff+strlen(*buff);
+   strcpy(p, sstr);
+   p += strlen(p);
+   strncpy(p, str, len);
+   strcpy(p+len, ent);
 
    return 1;
 }
@@ -1413,18 +1426,18 @@ void parseAddr(NETADDR *netAddr, unsigned char *str, dword len)
    strAddr = (char*)calloc(len+1, sizeof(char*));
    if (!strAddr) return;
 
-   memset(netAddr, 0, sizeof(NETADDR));
+   memset(netAddr, '\0', sizeof(NETADDR));
 
 
    strncpy(strAddr, str, len);
 
    ptr = strchr(strAddr, '@');
 
-   if (ptr)  *ptr = 0;
+   if (ptr)  *ptr = '\0';
 
    ptr = strchr(strAddr, ':');
    if (ptr) {
-      memset(ch, 0, sizeof(ch));
+      memset(ch, '\0', sizeof(ch));
       strncpy(ch, strAddr, ptr-strAddr);
       netAddr->zone = atoi(ch);
       tmp = ++ptr;
@@ -1435,7 +1448,7 @@ void parseAddr(NETADDR *netAddr, unsigned char *str, dword len)
 
    ptr = strchr(tmp, '/');
    if (ptr) {
-      memset(ch, 0, sizeof(ch));
+      memset(ch, '\0', sizeof(ch));
       strncpy(ch, tmp, ptr-tmp);
       netAddr->net = atoi(ch);
       tmp = ++ptr;
@@ -1445,7 +1458,7 @@ void parseAddr(NETADDR *netAddr, unsigned char *str, dword len)
 
    ptr = strchr(tmp, '.');
    if (ptr) {
-      memset(ch, 0, sizeof(ch));
+      memset(ch, '\0', sizeof(ch));
       strncpy(ch, tmp, ptr-tmp);
       netAddr->node = atoi(ch);
       ptr++;
@@ -1456,16 +1469,28 @@ void parseAddr(NETADDR *netAddr, unsigned char *str, dword len)
    } /* endif */
 }
 
+static void addkludge(unsigned char **line, char *kludge)
+{
+   if (*line == NULL) {
+       *line = malloc(strlen(kludge)+1);
+       strcpy(*line, kludge);
+       return;
+   }
+   *line = realloc(*line, strlen(*line)+strlen(kludge)+1);
+   strcat(*line, kludge);
+}
+
 void DecodeSubf(MSGH *msgh)
 {
    dword  SubPos;
    JAMSUBFIELDptr SubField;
-   char *msgid, *reply, *via, *pid, *seenby, *path, *flags, *kludges;
-   char *orig, *dest, *intl, *ptr, *fmpt, *topt;
-   sdword x;
+   char *ptr, *orig, *dest, *fmpt, *topt;
+   int x;
 
-   msgid=reply=via=pid=seenby=path=flags=kludges = NULL;
-   orig=dest=intl=fmpt=topt = NULL;
+   msgh->ctrl = (unsigned char*)palloc(1);
+   msgh->lctrl = (unsigned char*)palloc(1);
+   *(msgh->ctrl)=*(msgh->lctrl)='\0';
+   orig = dest = NULL;
 
    if (!msgh->sq->isecho) {
       SubPos = 0;
@@ -1476,13 +1501,13 @@ void DecodeSubf(MSGH *msgh)
       if ((SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_DADDRESS))) {
          makeKludge(&dest, "", SubField->Buffer, "", SubField->DatLen);
       }
+      fmpt = topt = NULL;
       if (orig) {
          ptr = strchr(orig, '@');
          if (ptr) *ptr = '\0';
          ptr = strchr(orig, '.');
          if (ptr) {
-            *ptr = '\0';
-	    ptr++;
+            *ptr++ = '\0';
 	    if (atoi(ptr) != 0) fmpt = ptr;
          }
       }
@@ -1491,110 +1516,90 @@ void DecodeSubf(MSGH *msgh)
          if (ptr) *ptr = '\0';
          ptr = strchr(dest, '.');
          if (ptr) {
-            *ptr = '\0';
-	    ptr++;
+            *ptr++ = '\0';
 	    if (atoi(ptr) != 0) topt = ptr;
          }
       }
       if (orig && dest) {
-         intl = (char*)palloc(strlen(orig)+strlen(dest)+8);
-         sprintf(intl, "%cINTL %s %s", '\x01', dest, orig);
-      }
-   } else {
-   } /* endif */
-      SubPos = 0;
-      if ((SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_MSGID))) {
-         makeKludge(&msgid, "\x01MSGID: ", SubField->Buffer, "", SubField->DatLen);
-      }
-      SubPos = 0;
-      if ((SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_REPLYID))) {
-         makeKludge(&reply, "\x01REPLY: ", SubField->Buffer, "", SubField->DatLen);
-      }
-      SubPos = 0;
-      if ((SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_PID))) {
-         makeKludge(&pid, "\x01PID: ", SubField->Buffer, "", SubField->DatLen);
-      }
-      for (SubPos = 0; (SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_TRACE));) {
-         makeKludge(&via, "\001Via ", SubField->Buffer, "\r", SubField->DatLen);
-      }
-      for (SubPos = 0; (SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_FTSKLUDGE));) {
-         if (strncasecmp(SubField->Buffer, "VIA", 3) == 0) {
-            makeKludge(&via, "\x01", SubField->Buffer, "\r", SubField->DatLen);
-         } else {
-            makeKludge(&kludges, "\x01", SubField->Buffer, "", SubField->DatLen);
-         }
-      }
-      for (SubPos = 0; (SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_FLAGS));) {
-         makeKludge(&flags, "\001FLAGS ", SubField->Buffer, "", SubField->DatLen);
-      }
-      for (SubPos = 0; (SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_SEENBY2D));) {
-         makeKludge(&seenby, "SEEN-BY: ", SubField->Buffer, "\r", SubField->DatLen);
-      }
-      for (SubPos = 0; (SubField = Jam_GetSubField(msgh, &SubPos, JAMSFLD_PATH2D));) {
-         makeKludge(&path, "\001PATH: ", SubField->Buffer, "\r", SubField->DatLen);
-      }
-      msgh->ctrl = (unsigned char*)palloc(1);
-      msgh->lctrl = (unsigned char*)palloc(1);
-      *(msgh->ctrl)=*(msgh->lctrl)='\0';
-      if (intl) {
-         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, strlen(msgh->ctrl)+strlen(intl)+1);
-         strcat(msgh->ctrl, intl);
-      }
-      if (topt) {
          x = strlen(msgh->ctrl);
-         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, x+strlen(topt)+7);
-         sprintf(msgh->ctrl+x, "%cTOPT %s", '\x01', topt);
+         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, x+strlen(orig)+strlen(dest)+8);
+         sprintf(msgh->ctrl+x, "%cINTL %s %s", '\x01', dest, orig);
       }
       if (fmpt) {
          x = strlen(msgh->ctrl);
          msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, x+strlen(fmpt)+7);
          sprintf(msgh->ctrl+x, "%cFMPT %s", '\x01', fmpt);
       }
-      if (msgid) {
-         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, strlen(msgh->ctrl)+strlen(msgid)+1);
-         strcat(msgh->ctrl, msgid);
+      if (topt) {
+         x = strlen(msgh->ctrl);
+         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, x+strlen(topt)+7);
+         sprintf(msgh->ctrl+x, "%cTOPT %s", '\x01', topt);
       }
-      if (reply) {
-         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, strlen(msgh->ctrl)+strlen(reply)+1);
-         strcat(msgh->ctrl, reply);
-      }
-      if (pid) {
-         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, strlen(msgh->ctrl)+strlen(pid)+1);
-         strcat(msgh->ctrl, pid);
-      }
-      if (kludges) {
-         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, strlen(msgh->ctrl)+strlen(kludges)+1);
-         strcat(msgh->ctrl, kludges);
-      }
-      if (flags) {
-         msgh->ctrl = (unsigned char*)realloc(msgh->ctrl, strlen(msgh->ctrl)+strlen(flags)+1);
-         strcat(msgh->ctrl, flags);
-      }
+      if (orig) pfree(orig);
+      if (dest) pfree(dest);
+      orig = dest = NULL;
+   }
 
-      if (seenby) {
-         msgh->lctrl = (unsigned char*)realloc(msgh->lctrl, strlen(msgh->lctrl)+strlen(seenby)+1);
-         strcat(msgh->lctrl, seenby);
+   SubPos = 0;
+   while (SubPos < msgh->Hdr.SubfieldLen) {
+      SubField = (JAMSUBFIELDptr)((char*)(msgh->SubFieldPtr)+SubPos);
+      SubPos += (SubField->DatLen+sizeof(JAMBINSUBFIELD));
+      ptr = NULL;
+      if (SubField->LoID == JAMSFLD_MSGID) {
+         makeKludge(&ptr, "\001MSGID: ", SubField->Buffer, "", SubField->DatLen);
+         addkludge(&msgh->ctrl, ptr);
+         pfree(ptr);
       }
-      if (path) {
-         msgh->lctrl = (unsigned char*)realloc(msgh->lctrl, strlen(msgh->lctrl)+strlen(path)+1);
-         strcat(msgh->lctrl, path);
+      else if (SubField->LoID == JAMSFLD_REPLYID) {
+         makeKludge(&ptr, "\001REPLY: ", SubField->Buffer, "", SubField->DatLen);
+         addkludge(&msgh->ctrl, ptr);
+         pfree(ptr);
       }
-      if (via) {
-         msgh->lctrl = (unsigned char*)realloc(msgh->lctrl, strlen(msgh->lctrl)+strlen(via)+1);
-         strcat(msgh->lctrl, via);
+      else if (SubField->LoID == JAMSFLD_PID) {
+         makeKludge(&ptr, "\001PID: ", SubField->Buffer, "", SubField->DatLen);
+         addkludge(&msgh->ctrl, ptr);
+         pfree(ptr);
       }
-      msgh->clen = strlen(msgh->ctrl);
-      msgh->lclen = strlen(msgh->lctrl);
-
-      pfree(kludges);
-      pfree(pid);
-      pfree(seenby);
-      pfree(path);
-      pfree(flags);
-      pfree(msgid);
-      pfree(reply);
-      pfree(intl);
-      pfree(via);
+      else if (SubField->LoID == JAMSFLD_TRACE) {
+         makeKludge(&ptr, "\001Via ", SubField->Buffer, "\r", SubField->DatLen);
+         addkludge(&msgh->lctrl, ptr);
+         pfree(ptr);
+      }
+      else if (SubField->LoID == JAMSFLD_FTSKLUDGE) {
+         if (strncasecmp(SubField->Buffer, "Via", 3) == 0 ||
+             strncasecmp(SubField->Buffer, "Recd", 4) == 0) {
+              makeKludge(&ptr, "\001", SubField->Buffer, "\r", SubField->DatLen);
+              addkludge(&msgh->lctrl, ptr);
+         }
+         else {
+              makeKludge(&ptr, "\001", SubField->Buffer, "", SubField->DatLen);
+              addkludge(&msgh->ctrl, ptr);
+         }
+         pfree(ptr);
+      }
+      else if (SubField->LoID == JAMSFLD_FLAGS) {
+         makeKludge(&ptr, "\001FLAGS ", SubField->Buffer, "", SubField->DatLen);
+         addkludge(&msgh->ctrl, ptr);
+         pfree(ptr);
+      }
+      else if (SubField->LoID == JAMSFLD_PATH2D) {
+         makeKludge(&ptr, "\001PATH: ", SubField->Buffer, "\r", SubField->DatLen);
+         addkludge(&msgh->lctrl, ptr);
+         pfree(ptr);
+      }
+      else if (SubField->LoID == JAMSFLD_SEENBY2D) {
+         makeKludge(&ptr, "SEEN-BY: ", SubField->Buffer, "\r", SubField->DatLen);
+         addkludge(&msgh->lctrl, ptr);
+         pfree(ptr);
+      }
+      else if (SubField->LoID == JAMSFLD_TZUTCINFO) {
+         makeKludge(&ptr, "\001TZUTC: ", SubField->Buffer, "", SubField->DatLen);
+         addkludge(&msgh->ctrl, ptr);
+         pfree(ptr);
+      }
+   } /* endwhile */
+   msgh->clen = strlen(msgh->ctrl);
+   msgh->lclen = strlen(msgh->lctrl);
 }
 
 /***********************************************************************
@@ -1674,4 +1679,3 @@ dword Jam_Crc32(unsigned char* buff, dword len)
         crc=(crc >> 8) ^ crc32tab [(int) ((crc^tolower(*ptr)) & 0xffUL)];
     return crc;
 }
-
